# thoth-code

./: .editorconfig  .gitignore  README.md
src/permutation-by-index/golang/: .editorconfig  go.mod  main.go  main_test.go
src/permutation-by-index/python/: main.py  pyproject.toml
src/permutation-by-index/python/tests/: test_main.py
