[project]
name = "permutation-by-index"
version = "0.1.0"
description = "Get permutation by index"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "environs>=14.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest]
minversion = "9.0.2"
addopts = ["-ra", "-q"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"
select = ["ALL"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public class
    "D103",  # Missing docstring in public function
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Use assert
